# embuild

./: .gitignore  LICENSE  README.md  pyproject.toml
src/embuild/: __init__.py  __main__.py  embuild.py
tests/: project.json
