[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "embuild"
version = "0.0.2"
authors = [{ name = "Grzegorz Grzęda", email = "grzegorz.grzeda@g2labs.pl" }]
description = "Embuild is a tool for building embedded projects."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/g2labs-grzegorz-grzeda/embuild"
Issues = "https://github.com/g2labs-grzegorz-grzeda/embuild/issues"
